# trac_mcp_server

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh  ci.sh  install.sh  pyproject.toml  test-report.md
.github/workflows/: ci.yml
.trac_mcp/: config.yaml
docs/: deployment.md  permissions.md
docs/project/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md  codebase
docs/project/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/reference/: cli.md  configuration.md  error-handling.md  format-conversion.md  live-testing.md  mcp-resources.md  mcp-tools.md  overview.md  structured-json-output.md  tool-architecture.md  troubleshooting.md
scripts/: agent_scenarios.py  test_trac.py
scripts/scenarios/: full_access.expected_tools.txt  full_access.permissions  readonly.expected_tools.txt  readonly.permissions  ticket_manager.expected_tools.txt  ticket_manager.permissions  wiki_editor.expected_tools.txt  wiki_editor.permissions
src/trac_mcp_server/: __init__.py  config.py  config_loader.py  config_schema.py  file_handler.py  logger.py  validators.py  version.py
src/trac_mcp_server/converters/: __init__.py  common.py  markdown_to_tracwiki.py  tracwiki_to_markdown.py
src/trac_mcp_server/core/: __init__.py  async_utils.py  client.py
src/trac_mcp_server/detection/: __init__.py  capabilities.py  processor_utils.py  web_scraper.py
src/trac_mcp_server/mcp/: __init__.py  __main__.py  lifespan.py  server.py
src/trac_mcp_server/sync/: __init__.py  engine.py  mapper.py  merger.py  models.py  reporter.py  resolver.py  state.py
tests/: conftest.py  test_async_utils.py  test_client.py  test_config.py  test_config_loader.py  test_config_schema.py  test_config_schema_sync.py  test_converter.py  test_detection.py  test_file_handler.py  test_lifespan.py  test_logger.py  test_sync_engine.py  test_sync_integration.py  test_sync_mapper.py  test_sync_merger.py  test_sync_reporter.py  test_sync_resolver.py  test_sync_state.py  test_version.py  test_wiki_resources.py
tests/test_mcp/: test_resources.py  test_server_wiki_tools.py
tests/test_mcp/tools/: __init__.py  test_errors.py  test_milestone.py  test_registry.py  test_sync.py  test_system.py  test_ticket.py  test_ticket_batch.py  test_wiki.py  (+2 more)
(+15 files in other folders)
